Implemented findIntersections for Geometries, Plane, Triangle, Polygon, and Sphere. Added corresponding unit tests for all. Refactored Ray class to include `getPoint` method.